# SevDesk

./: .gitignore  Cargo.toml  README.md  base_data_file.txt  resource.aps  resource.rc
.github/workflows/: build.yml
src/: command_handler.rs  data_manager.rs  fs_lib.rs  logic.rs  main.rs  model.rs  py_scripts.rs  regchange.rs  shortcuts.rs  tools.rs
