[package]
name = "several_desktops"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fs_extra = "1.2.0"
clearscreen = "1.0.10"
process_path = "0.1.4"
winsafe = { version = "0.0.11", features = ["user", "shell"] }
winreg = "0.10.1"
rdev = "0.5.1"
